syntax = "proto3";

package notice;

message LocationUpdate {
  repeated UserLocation users = 1;

  message UserLocation {
  string userId = 1;
  uint32 playerId = 2;
  float x = 3;
  float y = 4;
  }
}

message StartGame {
  string roomId = 1;
  int64 timestamp = 2;
}